fix: detail modal align update

--- a/src/pages/Details/Details.module.css
+++ b/src/pages/Details/Details.module.css
@@ -154,35 +154,10 @@ hr {
 }
 
 .line {
-  border-bottom: 1px solid #ccc;
-  margin: 0 -50px;
+  border-bottom: 1px solid #747474;
+  margin: 0 -51px;
   padding-top: 10px;
   margin-bottom: 10px;
-}
-
-.pagination {
-  display: flex;
-  justify-content: center;
-  margin-top: 30px;
-}
-
-.page_button {
-  padding: 12px 15px;
-  margin: 0 4px;
-  cursor: pointer;
-  background-color: #2e2e2e;
-  border-radius: 7px;
-  color: #747474;
-  border: none;
-}
-
-.page_button:hover {
-  background-color: #eb5230;
-  opacity: 0.5;
-}
-
-.page_button:disabled {
-  cursor: not-allowed;
 }
 
 .active {
@@ -192,8 +167,6 @@ hr {
 }
 
 .dropdown_select {
-  right: 5;
-  flex-direction: column;
   width: 168px;
   height: auto;
   border: 1px solid #747474;
